--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,3 @@
-
 @import './variables';
 @import './libs/normalize';
 
@@ -25,15 +24,32 @@ body {
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    @media (max-width: 1480px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 1180px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      gap: 30px;
+    }
+    @media (max-width: 800px) {
+      justify-content: center;
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
   }
 }
 
@@ -48,6 +64,12 @@ body {
       margin: 0;
     }
   }
+}
+.content__items-cart {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
 }
 
 .cart {
