--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,7 +8,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    @media (max-width: 650px) {
+      justify-content:end;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
   }
+
 
   &__logo {
     display: flex;
