--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -1,16 +1,21 @@
 @import '../variables';
 
 .pizza-block {
-  width: 280px;
+  width: 300px;
   text-align: center;
-  margin-bottom: 65px;
+  // margin-bottom: 65px;
 
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
-  }
+  // &:not(:nth-of-type(4n)) {
+  //   margin-right: 35px;
+  // }
+
+  // @media (max-width: 1160px) {
+  //   width: 260px;
+  // }
 
   &__image {
     width: 260px;
+    object-fit: contain;
   }
 
   &__title {
