--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -49,7 +49,7 @@ body {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 20px;
   }
 }
 
@@ -259,6 +259,7 @@ body {
         align-items: center;
         justify-content: center;
         width: 210px;
+        background-color: #3c3c3c;
 
         border-color: darken($color: $gray-line, $amount: 10);
 
@@ -296,17 +297,18 @@ body {
   }
 
   &--empty {
-    margin: 0 auto;
-    width: 560px;
+    margin: 80px auto;
+    width: 620px;
     text-align: center;
 
     h2 {
-      font-size: 32px;
-      margin-bottom: 10px;
+      font-size: 36px;
+      font-weight: 700;
+      margin-bottom: 15px;
     }
 
     p {
-      font-size: 18px;
+      font-size: 20px;
       line-height: 145.4%;
       letter-spacing: 0.01em;
       color: #777777;
