--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,6 +2,7 @@
 @import './libs/normalize';
 
 @import './components/all';
+@import './components/singlePizza';
 
 body {
   background-color: $background;
